# MemoLanes

./: README.md
.agents/skills/dependency-upgrades/: SKILL.md
.github/workflows/: app.yml
app/: .gitignore  Justfile  pubspec.yaml
app/android/app/: build.gradle.kts
app/assets/translations/: en-US.json  zh-CN.json
app/ios/Runner.xcodeproj/: project.pbxproj
app/journey_kernel/: Cargo.toml  package.json  tsconfig.json
app/journey_kernel/static/: flutter-bridge-editor.ts  journey-tile-provider.ts  map-controller.ts  params.ts
app/lib/: app_bootstrap.dart  main.dart
app/lib/body/: first_launch_setup.dart
app/lib/common/: achievement_stats_store.dart  app_translation_loader.dart  mmkv_util.dart  region_preference.dart
app/lib/utils/: nav_helper.dart
app/rust/: Cargo.toml
app/rust/geo_data_format/: Cargo.toml
app/rust/src/: archive.rs  flight_track_processor.rs  geo.rs  journey_data.rs  journey_header.rs  journey_snapshot.rs  main_db.rs  storage.rs  utils.rs
app/test/: android_manifest_test.dart  app_translation_loader_test.dart
tools/geo_rasterizer/: .gitignore  Cargo.toml  README.md  geo_entity_registry.toml  geo_names_overrides.toml
tools/geo_rasterizer/natural_earth/: README.md
tools/geo_rasterizer/src/: absorb.rs  cache.rs  cldr.rs  download.rs  entities.rs  lib.rs  main.rs  names.rs  overrides.rs  parse.rs  rasterize.rs  registry.rs
tools/geo_rasterizer/tests/: absorb.rs  area.rs  cache.rs  entities.rs  names.rs  names_coverage.rs  parse.rs  rasterize.rs  registry.rs
tools/geo_rasterizer/tests/fixtures/: synthetic.geojson
(+67 files in other folders)
