[package]
name = "geo_rasterizer"
version = "0.1.0"
edition = "2021"
description = "Offline tool: converts Natural Earth GeoJSON into geo_data.bin geo reference data"

[lib]
path = "src/lib.rs"

[[bin]]
name = "geo_rasterizer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
sha2 = "0.11"
clap = { version = "4", features = ["derive"] }
geo = "=0.33.1"
geo-types = "=0.7.19"
geojson = "=1.0.0"
tempfile = "3"
indicatif = "0.18"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
geo_data_format = { path = "../../app/rust/geo_data_format" }

[profile.release]
codegen-units = 1
